Fixed footer on mobile styles.

--- a/styles/effects.css
+++ b/styles/effects.css
@@ -17,7 +17,27 @@
 		transform: translate(0, -0px);
 	}
 }
-/* END OF FLOATING EFFECT */
+
+/* START OF SIDEBAR EFFECT */
+html {
+	--scrollbarBG: black;
+	--thumbBG: orange;
+}
+body::-webkit-scrollbar {
+	width: 0.8em;
+}
+body {
+	scrollbar-width: thin;
+	scrollbar-color: var(--thumbBG) var(--scrollbarBG);
+}
+body::-webkit-scrollbar-track {
+	background: var(--scrollbarBG);
+}
+body::-webkit-scrollbar-thumb {
+	background-color: var(--thumbBG);
+	border-radius: 6px;
+	border: 3px solid var(--scrollbarBG);
+}
 
 /* GLITCH WORDS EFFECT */
 .glitch {
@@ -180,5 +200,3 @@
 	overflow: hidden;
 	animation: noise-anim-2 15s infinite linear alternate-reverse;
 }
-
-/* END OF GLITCH EFFECT */
