--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -4,6 +4,25 @@
 /* MEDIA QUERIES  */
 @media only screen and (max-width: 500px) {
 	/* Globals */
+
+	::-webkit-scrollbar:vertical {
+		width: 12px;
+	}
+
+	::-webkit-scrollbar:horizontal {
+		height: 12px;
+	}
+
+	::-webkit-scrollbar-thumb {
+		background-color: rgba(0, 0, 0, 0.5);
+		border-radius: 10px;
+		border: 2px solid #ffffff;
+	}
+
+	::-webkit-scrollbar-track {
+		border-radius: 10px;
+		background-color: #ffffff;
+	}
 	h1 {
 		font-size: 2em;
 	}
@@ -57,5 +76,20 @@
 
 	h1 {
 		font-size: 1.6em;
+	}
+
+	html {
+		--scrollbarBG: black;
+		--thumbBG: orange;
+	}
+
+	footer img {
+		width: 1.5em;
+	}
+}
+
+@media only screen and (max-width: 380px) {
+	footer img {
+		width: 1.3em;
 	}
 }
